# brainTumourProject

./: .gitignore  README.md  demo.ipynb
Code/: 3d_unet_training.ipynb  Basis3DUNet.ipynb  Data_Extraction.ipynb  Dataset_Utils.ipynb  Dataset_Utils.py  First_Model_UNet.ipynb  Minicubes_Usage_Example.ipynb  Small3DSegNet.ipynb  Small3DUNet.ipynb  architecture_from_lecture.ipynb  calc_hausdorff.py  cropping_images.ipynb  custom_losses.py  data_loading.py  dataset_utils.py  demo.ipynb  mateusbuda_utils.py  pyproject.toml  requirements.txt  result_visualization.ipynb  setup_project.py  train.py  unet_short.py  visualization_utils.py  visualize_heatmap.ipynb
Code/Adrian_code/: Data_Extraction.ipynb  Dataset_Utils.py  result_visualization.ipynb
Code/Architectures/: small_seg_net.py  unet_2d.py  unet_3d.py  unet_3d_context.py
Code/Optional/: Minicubes_Usage_Example.ipynb  calc_hausdorff.py  result_visualization.ipynb
Code_smallSegNet/: Dataset_Utils.py  Small3DSegNet.ipynb  custom_losses.py
Code_smallSegNet/.ipynb_checkpoints/: Small3DSegNet-checkpoint.ipynb  demo-checkpoint.ipynb
Task01_BrainTumour/: readme.md
Weights/: weights_epoch0_step0_loss0.651.h5  weights_epoch0_step0_loss0.821.h5  weights_epoch0_step0_loss2.000.h5
images/: animated_results.webm
