[tool.poetry]
name = "brainTumorProject"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
SimpleITK = "^2.1.1"
torch = "^1.12.1"
matplotlib = "^3.5.3"
seg-metrics = "^1.0.36"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
